current SVN:

* Interpret e.g. cc, c++, gcc, g++ as ELLCC.
* Update to LLVM r256671.
* Create a Linux build directory and scripts.
* Updates to build openssh.
* Updates to build ARMv7 Linux.
* Add header files for suckless software builds.

version 0.1.23:

* Built and booted a Raspberry Pi Linux kernel.
* Fix ARM assembly with hard float and external assembler.
* Update to nghttp2 to 1.6.0.
* Update to LLVM r256384.

version 0.1.22:

* Add header files to compile Toybox.

version 0.1.21:

* Update to GDB 7.10.1.
* Update to QEMU 2.5.0.
* Update to LLVM r255872.
* Import and build the libevent 2.0.22 library.
* Import and build the nanomsg 0.8-beta library.
* Update to LLVM r255244.
* Build curl with openldap support.
* Import and build the openldap 2.4.43 library.
* Build curl with metalink support.
* Import and build the libmetalink 0.1.3 library.
* Import and build the curl 7.46.0 library.
* Import and build the nghttp2 1.5.0 library.
* Import and build the libssh2 1.6.0 library.
* Import and build the c-ares 1.10.0 library.
* Microblaze fix for mbed TLS.
* Import and build the mbed TLS 2.2.0 libraries (Formerly PolarSSL).

version 0.1.20:

* Fixed non-x86_64 bin directories.
* Update to LLVM r254161.
* Update to LLVM r253660.

version 0.1.19:

* Update to LLVM r253132. Added lld.
* Fixed libncurses and libedit builds.
* Update to LLVM r252898.
* Update to LLVM r252410.

version 0.1.18:

* Update to LLVM r251722.
* Modifications to build Linux.
* Update to LLVM r251283.
* Update to LLVM r251219.
* Update to musl 1.1.12.
* Added a little 'm' makefile to build LLVMLinux with ELLCC (work in progress).
* Added ncurses C++ headers and library builds for wide character support.
* Make a link ncurses.h -> curses.h.

version 0.1.17:

* Update to LLVM r250619.
* Update to ncurses-6.0.
* Update to libedit-20150325-3.1.

version 0.1.16:

* Update to LLVM r249946.
* Update to LLVM r248750.
* Update to LLVM r248677.
* Update to LLVM r248571.

version 0.1.15:
