@@ -1,0 +1,22 @@
+aarch64-linux-eng
+armeb-linux-engeabi
+armeb-linux-engeabihf
+arm-elk-engeabi
+arm-linux-engeabi
+arm-linux-engeabihf
+armv6-linux-engeabi
+armv6-linux-engeabihf
+i386-elk-eng
+i386-linux-eng
+microblaze-elk-eng
+microblaze-linux-eng
+mips-elk-engsf
+mipsel-linux-eng
+mipsel-linux-engsf
+mips-linux-eng
+mips-linux-engsf
+ppc-elk-eng
+ppc-linux-eng
+thumb-linux-engeabi
+x86_64-elk-eng
+x86_64-linux-eng
